--- a/appsrc/AppFVC/AppFVC/Views/PreConditionsPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/PreConditionsPage.xaml
@@ -11,7 +11,7 @@
         <StackLayout Padding="0,0,0,30">
             <Frame 
             CornerRadius="8"
-            HasShadow="True"             
+            HasShadow="False"             
             BackgroundColor="White" 
             Margin="45,70,45,30.7">
                 <Grid Padding="10,0,10,0" x:Name="gridComorb">
