--- a/appsrc/AppFVC/AppFVC/Views/SmsPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/SmsPage.xaml
@@ -10,7 +10,7 @@
 
     <ScrollView>
         <StackLayout Padding="0,0,0,30">
-            <Frame CornerRadius="8" VerticalOptions="Start" x:Name="FrameSms" Margin="45,70,45,30.7">
+            <Frame CornerRadius="8" VerticalOptions="Start" x:Name="FrameSms" HasShadow="False" Margin="45,70,45,30.7">
                 <Grid VerticalOptions="FillAndExpand" HorizontalOptions="CenterAndExpand" x:Name="GridSms">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
