--- a/appsrc/AppFVC/AppFVC/Views/StatusHealthyPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusHealthyPage.xaml
@@ -52,7 +52,8 @@
                 </StackLayout>
             </Frame>
 
-            <ListView x:Name="ListViewNews" SeparatorColor="Transparent" VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#6FCF97" ItemsSource="{Binding NewsItems}" HeightRequest="550" HasUnevenRows="True" >
+            <ListView x:Name="ListViewNews" SeparatorColor="Transparent" VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#6FCF97" ItemsSource="{Binding NewsItems}" HeightRequest="550"  HasUnevenRows="True" >
+               
                 <ListView.ItemTemplate >
                     <DataTemplate>
                         <ViewCell>
@@ -75,7 +76,15 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-            <Image Source="Group.png" VerticalOptions="EndAndExpand" Margin="0,30,0,30" HorizontalOptions="Center"></Image>
+            <Image Source="Group.png" VerticalOptions="EndAndExpand"  HorizontalOptions="Center">
+                <Image.Margin>
+                 <OnPlatform x:TypeArguments="Thickness">
+                        <On Platform="iOS" Value="0,0,0,30"></On>
+                        <On Platform="Android" Value="0,30,0,30"></On>
+
+                 </OnPlatform>
+             </Image.Margin>
+            </Image>
         </StackLayout>
     </ScrollView>
 </ContentPage>
