--- a/appsrc/AppFVC/AppFVC/Views/WelcomePage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/WelcomePage.xaml
@@ -9,7 +9,7 @@
     <ScrollView>
         
 
-            <Frame CornerRadius="8" VerticalOptions="StartAndExpand" HasShadow="True" Margin="45,70,45,30">
+            <Frame CornerRadius="8" VerticalOptions="StartAndExpand" HasShadow="False" Margin="45,70,45,30">
             <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Padding="1,0,1,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
