--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -92,7 +92,7 @@
                         </Label.GestureRecognizers>
                     </Label>
                     <CheckBox Grid.Row="8" Grid.Column="0" HeightRequest="20" WidthRequest="30" IsChecked="{Binding CheckTermo}" Color="#219653" Margin="5,0,0,0" VerticalOptions="CenterAndExpand"  ></CheckBox>
-                    <BoxView Grid.Row="8" Grid.Column="1" x:Name="boxTerms" WidthRequest="160" HeightRequest="25" HorizontalOptions="Start" VerticalOptions="Center">
+                    <BoxView Grid.Row="8" Grid.Column="1" x:Name="boxTerms" WidthRequest="160" HorizontalOptions="Start" VerticalOptions="Center">
                         <BoxView.GestureRecognizers>
                             <TapGestureRecognizer
                          BindingContext="{Binding Source={x:Reference GridRegister}, Path=BindingContext}"
@@ -118,8 +118,8 @@
                     <CheckBox Grid.Row="9" Grid.Column="0" HeightRequest="20" WidthRequest="30" IsChecked="{Binding CheckPref}" Color="#219653" Margin="5,0,0,0" VerticalOptions="CenterAndExpand" ></CheckBox>
                     <Label Grid.Row="9" Grid.Column="1" x:Name="lbPref" Text="Desejo receber notificações da prefeitura." FontSize="12" TextColor="#4F4F4F" VerticalOptions="StartAndExpand" ></Label>
                     -->
-                    <Label Grid.Row="10" Grid.ColumnSpan="2" Margin="10,0,10,5" Text="{Binding Erro}" HorizontalTextAlignment="Center" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
-                    <Button Grid.Row="11" Grid.ColumnSpan="2" Margin="0,10,0,0" Command="{Binding NavegarNext}" Style="{StaticResource ButtonNextStyle}" BackgroundColor="{Binding ButtonColor}" Text="Próximo" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <Label Grid.Row="9" Grid.ColumnSpan="2" Margin="10,0,10,5" Text="{Binding Erro}" HorizontalTextAlignment="Center" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
+                    <Button Grid.Row="10" Grid.ColumnSpan="2" Margin="0,10,0,0" Command="{Binding NavegarNext}" Style="{StaticResource ButtonNextStyle}" BackgroundColor="{Binding ButtonColor}" Text="Próximo" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                
                 </Grid>
                 
