--- a/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
@@ -28,8 +28,8 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                     <Image Grid.Column="0" Grid.RowSpan="2" WidthRequest="123" HeightRequest="184" Source="estou_de_isolamento.png"></Image>
-                    <Label Margin="10,10,0,0" Grid.Column="1" Grid.Row="0" FontSize="20" Text="Atenção! Você deve fazer o isolamento preventivo" Style="{StaticResource BoldFont}" TextColor="#333333" FontAttributes="Bold"/>
-                    <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="1" FontSize="16" Text="Você foi exposto ao Corona vírus e pode ter sido contaminado. Fique em casa e observe os sintomas." TextColor="#4F4F4F"/>
+                    <Label Margin="10,10,0,0" Grid.Column="1" Grid.Row="0" FontSize="20" Text="{Binding HeaderTitle}" Style="{StaticResource BoldFont}" TextColor="#333333" FontAttributes="Bold"/>
+                    <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="1" FontSize="16" Text="{Binding HeaderBody}" TextColor="#4F4F4F"/>
                 </Grid>
          </Frame>
             <Frame Padding="25,0,10,0"  HasShadow="False" Margin="40,16,40,16" x:Name="FrVirus" HeightRequest="45" BackgroundColor="#EE7000"  CornerRadius="22">
