--- a/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
@@ -38,7 +38,7 @@
                     <TapGestureRecognizer
                             BindingContext="{Binding Source={x:Reference stSaude}, Path=BindingContext}"
                             CommandParameter="{Binding Source={x:Reference FrVirus}, Path=BindingContext}"
-                            Command="{Binding TermsOfUse}"
+                            Command="{Binding NavegarTermsOfUse}"
                             ></TapGestureRecognizer>
                 </Frame.GestureRecognizers>
                 <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="15">
