--- a/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusIsolationPage.xaml
@@ -38,7 +38,7 @@
                     <TapGestureRecognizer
                             BindingContext="{Binding Source={x:Reference stSaude}, Path=BindingContext}"
                             CommandParameter="{Binding Source={x:Reference FrVirus}, Path=BindingContext}"
-                            Command="{Binding WebView}"
+                            Command="{Binding NavigateTerms}"
                             ></TapGestureRecognizer>
                 </Frame.GestureRecognizers>
                 <StackLayout Orientation="Horizontal" HorizontalOptions="Start" Spacing="15">
