--- a/appsrc/AppFVC/AppFVC/Views/StatusQuarantinePage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusQuarantinePage.xaml
@@ -37,7 +37,7 @@
                     <TapGestureRecognizer
                             BindingContext="{Binding Source={x:Reference stQuarentine}, Path=BindingContext}"
                             CommandParameter="{Binding Source={x:Reference FrVirus}, Path=BindingContext}"
-                            Command="{Binding WebView}"
+                            Command="{Binding NavigateTerms}"
                             ></TapGestureRecognizer>
                 </Frame.GestureRecognizers>
                 <StackLayout Orientation="Horizontal" HorizontalOptions="Start" Spacing="15">
