--- a/appsrc/AppFVC/AppFVC/Views/StatusWebViewPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusWebViewPage.xaml
@@ -15,7 +15,7 @@
         <Label Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="Start" HorizontalTextAlignment="Center" Padding="0,22,0,16" FontSize="16" TextColor="White" Style="{StaticResource BoldFont}" Text="Preciso de orientação médica" BackgroundColor="#6FCF97"/>
         <ImageButton Grid.Row="0" Margin="15,7,0,0" Source="x_icon_white.png" BackgroundColor="Transparent" Command="{Binding NavigationPop}" HeightRequest="30" HorizontalOptions="Start"></ImageButton>
 
-        <WebView Grid.Row="1" Source="{Binding Url}"></WebView>
+        <WebView Grid.Row="1" VerticalOptions="StartAndExpand" HeightRequest="900" Source="{Binding Url}"></WebView>
     </Grid>
 
 </ContentPage>
