Botoes de back e forward e refresh adicionados na WebView.

--- a/appsrc/AppFVC/AppFVC/Views/StatusWebViewPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusWebViewPage.xaml
@@ -4,8 +4,9 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="AppFVC.Views.StatusWebViewPage">
-    <Grid VerticalOptions="FillAndExpand">
+    <Grid VerticalOptions="FillAndExpand" BackgroundColor="#6FCF97">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -14,8 +15,12 @@
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0" HorizontalOptions="FillAndExpand" VerticalOptions="Start" HorizontalTextAlignment="Center" Padding="0,22,0,16" FontSize="16" TextColor="White" Style="{StaticResource BoldFont}" Text="Preciso de orientação médica" BackgroundColor="#6FCF97"/>
         <ImageButton Grid.Row="0" Margin="15,7,0,0" Source="x_icon_white.png" BackgroundColor="Transparent" Command="{Binding NavigationPop}" HeightRequest="30" HorizontalOptions="Start"></ImageButton>
+        <ImageButton Grid.Row="1" Margin="15,0,0,10" Source="icon_back.png" Clicked="btnBackClicked" HeightRequest="25" HorizontalOptions="Start"></ImageButton>
+        <ImageButton Grid.Row="1" Margin="0,0,0,10" x:Name="btnRefresh" Source="icon_refresh.png" Clicked="btnRefreshClicked" HeightRequest="25" HorizontalOptions="Center"></ImageButton>
+        <Label Grid.Row="1" Margin="0,3,0,0" x:Name="lblStatus" HorizontalOptions="Center" TextColor="White"/>
+        <ImageButton Grid.Row="1" Margin="0,0,15,10" Source="icon_forward.png" Clicked="btnForwardClicked" HeightRequest="25" HorizontalOptions="End"></ImageButton>
 
-        <WebView Grid.Row="1" VerticalOptions="StartAndExpand" HeightRequest="900" Source="{Binding Url}"></WebView>
+        <WebView Grid.Row="2" x:Name="browser" Source="{Binding Url}" Navigating="PagOnNavigating" Navigated="PagOnNavigated" VerticalOptions="StartAndExpand" HeightRequest="900" ></WebView>
     </Grid>
 
 </ContentPage>
