--- a/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/PreConditionsRiskGroupPage.xaml
@@ -11,12 +11,14 @@
     <ScrollView>
         <StackLayout Padding="0,0,0,30">
             <Frame CornerRadius="8" HasShadow="False" VerticalOptions="Start" x:Name="FrameRiskGroup" Margin="45,70,45,30.7">
-                <Grid VerticalOptions="Start" HorizontalOptions="FillAndExpand" RowSpacing="20" x:Name="GridSms" Padding="1,0,1,5">
+                <Grid VerticalOptions="Start" HorizontalOptions="FillAndExpand" x:Name="GridSms" Padding="1,0,1,5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="3*" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        
 
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
@@ -24,20 +26,28 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Você mora com alguém do grupo de risco?" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalTextAlignment="Center"></Label>
+                    <Label Grid.Row="0" Grid.ColumnSpan="2" Margin="0,0,0,20" Text="Você mora com alguém do grupo de risco?" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalTextAlignment="Center"></Label>
 
-                    <Button Grid.Row="1" Grid.Column="0" Text="Sim" WidthRequest="60" HeightRequest="36" Margin="30,0,0,0" x:Name="lbSim" CornerRadius="8" FontSize="16" TextColor="White" BackgroundColor="{Binding SimColor}" Command="{Binding SimCommand}" HorizontalOptions="Center">
-                       
-                    </Button>
+                    <Button Grid.Row="1" Grid.Column="0" Margin="0,0,0,20" Text="Sim" WidthRequest="100" HeightRequest="43" x:Name="lbSim" CornerRadius="8" FontSize="16" TextColor="{Binding SimTextColor}" BackgroundColor="{Binding SimColor}" Command="{Binding SimCommand}" BorderColor="#219653" BorderWidth="4" HorizontalOptions="Center"/>
 
-                    <Button Grid.Row="1" Grid.Column="1" Text="Não" WidthRequest="60" Margin="0,0,30,0" x:Name="lbNao" CornerRadius="8" FontSize="16" TextColor="white" BackgroundColor="{Binding NaoColor}" Command="{Binding NaoCommand}" HorizontalOptions="Center">
-                       
-                    </Button>
-                    <Label Grid.Row="2" Grid.ColumnSpan="2" Text="Quem faz parte do grupo de risco?" Style="{StaticResource BoldFont}" HorizontalTextAlignment="Center" FontSize="12" TextColor="#219653" TextDecorations="Underline" VerticalOptions="StartAndExpand" />
+                    <Button Grid.Row="1" Grid.Column="1" Margin="0,0,0,20" Text="Não" WidthRequest="100" HeightRequest="43" x:Name="lbNao" CornerRadius="8" FontSize="16" TextColor="{Binding NaoTextColor}" BackgroundColor="{Binding NaoColor}" Command="{Binding NaoCommand}" BorderColor="#219653" BorderWidth="4" HorizontalOptions="Center"/>
 
-                    <Button Grid.Row="4" Grid.ColumnSpan="2" Text="Próximo" Command="{Binding NavegarNext}" Style="{StaticResource ButtonNextStyle}" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand"></Button>
 
-                   
+                    <Label Grid.Row="2" Grid.ColumnSpan="2" Margin="0,0,0,140" Text="Quem faz parte do grupo de risco?" Style="{StaticResource BoldFont}" HorizontalTextAlignment="Center" FontSize="12" TextColor="#219653" TextDecorations="Underline" VerticalOptions="StartAndExpand" />
+
+                    <Label Grid.Row="3" Grid.ColumnSpan="2" Margin="10,0,10,5" Text="{Binding Erro}" HorizontalTextAlignment="Center" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" TextColor="#EB5757" FontSize="11"></Label>
+
+                    <Button Grid.Row="4" Grid.ColumnSpan="2" Text="Próximo" Command="{Binding NavegarNext}" Style="{StaticResource ButtonNextStyle}" VerticalOptions="Start" HorizontalOptions="CenterAndExpand"></Button>
+                    <ActivityIndicator
+                           IsVisible="{Binding IsBusy}"
+                           IsRunning="{Binding IsBusy}"
+                           Color="Red" 
+                    Grid.Row="5"
+                    Grid.ColumnSpan="2"
+                    HorizontalOptions="Center"
+                    BackgroundColor="Transparent"                
+                   />
+
                 </Grid>
               
             </Frame>
